:bug: overflow hover aside fix

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -17,6 +17,8 @@ $title = $title-size $font-family
     // cursor none
     scroll-behavior smooth
     user-select none
+
+body
     overflow-x hidden
 
 .aside
@@ -153,7 +155,6 @@ main
             display flex
             flex-direction: column
             width 40%
-            overflow visible
             h3
                 font-size 6em
                 font-family $font-family
@@ -173,7 +174,6 @@ main
                 padding-left 5vw
                 margin-top 5vh
                 position relative
-                overflow visible
                 h2
                     font $title
                     font-weight 600
